--- a/index.html
+++ b/index.html
@@ -390,14 +390,51 @@ Contest <br>
             </div>
             <div class="col-md-12">
     
-					  <p><a role="button" class="btn btn-link btn-lg" href="http://www.fengup.top" target="_blank">Zhenfeng Zhu</a></p>
-					  <p><a role="button" class="btn btn-link btn-lg" href="http://hualuyao.com" target="_blank">Luyao Hua</a></p>
-					  <p></p>
-					  <p></p>
-					  <p></p>
-            <p class="text-center">Contact i at zhiyuanzhao.com exchange Links</p>
-      
+                <p></p>
+                <div class="col-md-4 col-sm-12">
+                    <div class="media"
+                        <span><a role="button" class="btn btn-link btn-lg" href="http://www.fengup.top" target="_blank">Zhenfeng Zhu</a></span>
+                        <p></p>
+                        <span></span>
+                        <p></p>
+                        <span></span>
+                        <p></p>
+                        <p></p>
+                    </div>
+
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="media"
+                        <span><a role="button" class="btn btn-link btn-lg" href="http://hualuyao.com" target="_blank">Luyao Hua</a></span>
+                        <p></p>
+                        <span><b></b></span>
+                        <p></p>
+                        <span><b></b></span>
+                        <p></p>
+                        <span></span>
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12">
+                    <div class="media"
+                        <span><b></b></span>
+                        <p></p>
+                        <span><b></b></span>
+                        <p></p>
+                        <span></span>
+                        <p></p>
+                        <span><b></b></span>
+                        <p></p>
+                        <p></p>
+                    </div>
+                </div>                
+
             </div>
+            <p class="text-center">Contact i at zhiyuanzhao.com exchange Links</p>
+
         </div>
     </div>
   </section>
