--- a/index.html
+++ b/index.html
@@ -240,9 +240,11 @@
           <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
           	    <h6>Microsoft Research Lab - Asia - Machine Learing</h6>
                 <h5>Research Intern</h5>
-                <p><b>Empty container return and release forecasing</b><br>
-                <p><b>Survey on multi-step head hierarchical time series forecasting algorithm</b><br>
-             
+		<p><b>Eulti-step ahead time series forecasting algorithm: </b>Empty container return and release forecasing<br>
+                <p><b>Epatial-temporal forecasting: </b>combine extra features & graph embedding<br>
+                <p><b>Eulti-step head time series forecasting strategy: </b>recursive strategy, direct strategy, etc.<br>
+                <p><b>Eierarchical time series forecasting algorithm aptimization: </b>regularization for sparse adjustments<br>
+
 									 
 								</p>
             </div>
