--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@
           <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
           	    <h6>DiDi Chuxing - CTO - DiDi Research Lab</h6>
                 <h5>Machine Learning Algorithm Engineer</h5>
-                <p><b>Forecasting:</b> predict driver churn rate with GBDT model<br>
-									 <b>Intelligent allowance:</b> provide users with an allowance intelligently based on conversions rates<br>
-									 <b>Regional operation:</b> regional city cluster for localization strategy<br>
-									 <b>Built Credit score system</b><br>
-									 <b>Built the Personas</b><br>
+                <p><b>Forecasting:</b> predict driver churn rate with GBDT model, AUC : 0.8<br>
+		<b>Intelligent allowance:</b> provide users with an allowance intelligently based on conversions rates<br>
+		<b>Regional operation:</b> regional city cluster for localization strategy<br>
+		<b>Built Credit score system</b><br>
+		<b>Built the Personas</b><br>
 								</p>
             </div>
             </div>
@@ -286,9 +286,9 @@
           <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
           	    <h6>Nokia Bell Lab - MWC 2017</h6>
                 <h5>Face Recognition Project Leader</h5>
-                <p><b>Face recognition:</b> convolutional neural network, AlexNet model<br>
-									 <b>Face detection:</b> based on HOG feature and Adaboost algorithm<br>
-									 <b>Architecture design: </b> system architecture, interfaces design
+                <p><b>Face recognition:</b> convolutional neural network, AlexNet model, accuracy : 97%<br>
+		<b>Face detection:</b> based on HOG feature and Adaboost algorithm<br>
+		<b>Architecture design: </b> system architecture, interfaces design
 								</p>
             </div>
             </div>
@@ -308,9 +308,9 @@
           	    <h6>State Grid - China Electric Power Research</h6>
                 <h5>Computer Vision Algorithm Engineer</h5>
                 <p><b>Table recognition and segmentation: </b> convolutional neural network, AlexNet model<br>
-									 <b>Face detection:</b> Hough Transform<br>
-									 Handwriting recognition of the contents of the segmented tablen
-								</p>
+		<b>Face detection:</b> Hough Transform<br>
+		Handwriting recognition of the contents of the segmented table, accuracy : 98%
+		</p>
             </div>
             </div>
         </div>
